[package]
name = "peerpipe"
version = "0.1.0"
authors = ["Scott Nelson <scott@scottnelson.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
clap = "2.33.0"
cryptostream = "0.3.0"
failure = "0.1.6"
openssl = "0.10.25"
rand_os = "0.1"
sha2 = "0.8.0"
x25519-dalek = "0.5.2"
